# stars-adsb

./: .gitignore  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: build.yml  secret-detection.yml
pkgs/shared/: index.d.ts  package.json  tsconfig.json
src/client/: index.html  package.json  tsconfig.json
src/client/.tauri-dist/data/configs/: N90.json
src/client/.tauri-dist/public/font/: bitmap_font.sh  sddCharFontSetASize1.json  sddCharOutlineFontSetASize1.json
src/client/data/configs/: N90.json
src/client/data/videomaps/: decode_videomap.sh
src/client/src/: api.ts  esm-react.d.ts  index.ts  main.tsx
src/client/src-tauri/: Cargo.toml  tauri.conf.json
src/client/src/lib/: bitmapFont.ts
src/client/src/stars/: blip.tsx  colors.json  colors.ts  datablock.tsx  dcb.tsx  lists.tsx  ui.tsx  webgl-video-map.ts  wx.tsx
src/client/src/types/: esm-url-imports.d.ts
src/server/: package-lock.json  package.json  pom.xml  tsconfig.json
src/server/data/: recat_cwt.json  recat_cwt.py
src/server/src/java/dev/vstars/: ItwsConsumer.java
src/server/src/ts/: index.ts  tfrs_notams.ts
